fix: Switch from gaps to borders
All previous attempts to reconcile the erroneous resizing of the grid
despite setting constraints on its size failed. However, implementing
the separation of squares as borders instead of gaps fixes this bug.

In truth, this is technically sidestepping the issue instead of solving
it outright, but the result is, in my opinion, much better than if gaps
were continued to be used even w/o the bug.

--- a/style.css
+++ b/style.css
@@ -1,18 +1,4 @@
-/* Initial resets */
-html {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 50px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 20px;
-}
-
+/* Initial resets + starting values */
 *,
 *:before,
 *:after {
@@ -24,26 +10,37 @@ body {
   padding: 0;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 50px;
+  gap: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+
 /* Square styles */
 .squaresContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: stretch;
+  justify-content: center;
   width: 600px;
-  gap: 1px;
 }
 
 .square {
-  --background-color: #555;
-  background-color: var(--background-color);
-  aspect-ratio: 1 / 1;
   flex: 1;
+  --background-color: #fff;
+  background-color: var(--background-color);
+  border: 0.1em solid #555;
+  aspect-ratio: 1 / 1;
+  margin: -1px 0 0 -1px; /* collapses borders */
 }
 
-.break {
-  flex-basis: 100%;
-  height: 0;
-}
 
 .newGridBtn {
   padding: 20px 30px;
@@ -56,4 +53,10 @@ body {
 
 .newGridBtn:active {
   background-color: #2f2f2f;
+}
+
+/* force every nth square onto new row */
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
